Integrations/DAT/force-app/main/default/objects/DAT_Integration_Config__mdt/DAT_Integration_Config__mdt.object-meta.xml
<CustomObject>
    <label>DAT Integration Config</label>
    <pluralLabel>DAT Integration Configs</pluralLabel>
</CustomObject>