Integrations/DAT/force-app/main/default/objects/DAT_Integration_Config__mdt/fields/Environment_Label__c.field-meta.xml
<CustomField>
    <fullName>Environment_Label__c</fullName>
    <label>Environment Label</label>
    <length>40</length>
    <type>Text</type>
</CustomField>