Integrations/DAT/force-app/main/default/objects/DAT_Integration_Config__mdt/fields/Partner_Id__c.field-meta.xml
<CustomField>
    <fullName>Partner_Id__c</fullName>
    <label>Partner ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>