Integrations/DAT/force-app/main/default/objects/DAT_Integration_Config__mdt/fields/User_Token_TTL_Seconds__c.field-meta.xml
<CustomField>
    <fullName>User_Token_TTL_Seconds__c</fullName>
    <label>User Token TTL Seconds</label>
    <precision>8</precision><scale>0</scale>
    <type>Number</type>
</CustomField>